<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95B7DD"
    tools:context="com.example.android.a108590061_hw6_part_2.OrderActivity">

    <TextView
        android:id="@+id/Your_Order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="6dp"
        android:text="@string/your_orders"
        android:textColor="#000000"
        android:textSize="20sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkout_txt" />

    <TextView
        android:id="@+id/select_date"
        android:layout_width="284dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/select_date_delivery"
        android:textColor="#000000"
        android:textSize="20sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery_methods" />

    <Button
        android:id="@+id/button"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:background="#3A96F1"
        android:onClick="CalendarPickDate"
        android:text="@string/date_btn"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_date" />

    <EditText
        android:id="@+id/address_text"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inp_address"
        android:inputType="textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/address_label"
        app:layout_constraintStart_toEndOf="@+id/address_label" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="303dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inp_name"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
        app:layout_constraintStart_toEndOf="@+id/name_label" />

    <TextView
        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/the_address"
        android:textColor="#000000"
        android:textSize="16sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <TextView
        android:id="@+id/delivery_label"
        android:layout_width="322dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/choose_delivery_method"
        android:textColor="#000000"
        android:textSize="20sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_text" />

    <EditText
        android:id="@+id/phone_text"
        android:layout_width="306dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inp_telephone_num"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/phone_label"
        app:layout_constraintStart_toEndOf="@+id/phone_label" />

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="22dp"
        android:text="@string/the_telephone"
        android:textColor="#000000"
        android:textSize="16sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_text" />

    <EditText
        android:id="@+id/note_text"
        android:layout_width="305dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inp_note"
        android:inputType="textCapSentences|textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/note_label"
        app:layout_constraintStart_toEndOf="@+id/note_label" />

    <TextView
        android:id="@+id/note_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/the_note"
        android:textColor="#000000"
        android:textSize="16sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_label" />

    <RadioGroup
        android:id="@+id/delivery_methods"
        android:layout_width="358dp"
        android:layout_height="107dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery_label">

        <RadioButton
            android:id="@+id/self_pick_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/self_pick_up_method"
            android:textSize="16sp"
            android:typeface="serif" />

        <RadioButton
            android:id="@+id/next_day_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/next_day_delivery_by_ground_method"
            android:textSize="16sp"
            android:typeface="serif" />

        <RadioButton
            android:id="@+id/same_day_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/same_day_courier_messenger_service_method"
            android:textSize="16sp"
            android:typeface="serif" />


    </RadioGroup>

    <TextView
        android:id="@+id/name_label"
        android:layout_width="53dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="22dp"
        android:text="@string/the_name"
        android:textColor="#000000"
        android:textSize="16sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Your_Order" />

    <TextView
        android:id="@+id/checkout_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/order_checkout"
        android:textColor="#000000"
        android:textSize="27sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:fontFamily="casual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>

